# tcfp

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_srr_vram.py  benchmark_tcfp.py  validate_rfmt.py  validate_srr.py
examples/: train_convergence.py
tcfp/: __init__.py  core.py  cuda_ext.py  kernels.py
tcfp/csrc/: fused_dual_gemm.cu  fused_dual_gemm.h  fused_dual_gemm_bind.cpp
tcfp/nn/: __init__.py  modules.py
tcfp/tcfp12/: __init__.py
tcfp/tcfp16/: __init__.py
tcfp/tcfp8/: __init__.py  quantize.py
tcfp/training/: __init__.py  checkpointing.py  curriculum.py  monitoring.py  policy.py  presets.py
tests/: test_block_scaling_kernels.py  test_checkpoint_compat.py  test_core.py  test_cuda_ext.py  test_delayed_scaling.py  test_fused_act_quant_gemm.py  test_fused_dual_quant.py  test_fused_kernels.py  test_nn.py  test_tcfp12.py  test_tcfp12_enhanced.py  test_tcfp12_tensor_cores.py  test_tcfp16.py  test_tcfp8.py  test_tensor_cores.py  test_training.py
