[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tcfp"
version = "0.1.0"
description = "Tensor Core Floating Point — Hardware-accelerated precision-enhanced FP8 training formats"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "bwiemz"}]
keywords = ["deep-learning", "quantization", "fp8", "tensor-cores", "low-precision", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
triton = ["triton>=3.0.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0"]
all = ["tcfp[triton,dev]"]

[tool.setuptools.packages.find]
include = ["tcfp*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
